Removed section 6 navbar, fixed overflow x, fixed scrollbar appearing as grey background

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Scrollbar */
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 0px;
 }
 
 /* Färgschema */
@@ -20,6 +20,8 @@ body {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   background-color: var(--color-dark);
   color: var(--color-lightest);
+  max-width:100vw;
+  overflow-x:hidden;
 }
 
 
